tests/should_fail/match_option_pattern_on_string.nv
module test
// match: Option pattern on String type (not an Option)
fn bad(s: String) -> String {
    return match s {
        Some(x) => x,
        None()  => "default"
    }
}
